--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: speech_to_text_google
-description: A new Flutter plugin project.
+description: This package is implemented to display the Google speech to text dialog.
 version: 0.0.1
-homepage:
+issue_tracker: https://github.com/miladhf/speech_to_text_google/issues
+repository: https://github.com/miladhf/speech_to_text_google
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
