--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  speech_to_text_google:
+  speech_to_text_google_dialog:
     # When depending on this package from a real application you should use:
     #   speech_to_text_google: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
