--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 
   speech_to_text_google_dialog:
     # When depending on this package from a real application you should use:
-    #   speech_to_text_google: ^x.y.z
+    #   speech_to_text_google_dialog: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
